trunk/OldArchive/0f4c73e5173d4e5e4593ae915f763469-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:8:1: error: need ‘typename’ before ‘A<T>::X’ because ‘A<T>’ is a dependent scope
 A<T>::X f()
 ^
